fix null respones error from upload function