@@ -1,37 +1,37 @@
 package MusicService.example.MusicService.Music;
 
-
 import MusicService.example.MusicService.Music.Client.UserServiceClient;
-import MusicService.example.MusicService.Music.DTO.SongResponseDTO;
-import MusicService.example.MusicService.Music.DTO.SongUploadResponseDTO;
-import MusicService.example.MusicService.Music.DTO.UserDetailsDTO;
+import MusicService.example.MusicService.Music.DTO.*;
 import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
-import org.apache.tika.exception.TikaException;
-import org.jaudiotagger.audio.exceptions.CannotReadException;
-import org.jaudiotagger.audio.exceptions.InvalidAudioFrameException;
-import org.jaudiotagger.audio.exceptions.ReadOnlyFileException;
-import org.jaudiotagger.tag.TagException;
+import lombok.extern.slf4j.Slf4j;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.*;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
-import org.xml.sax.SAXException;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @RequestMapping("/api/music")
 public class SongController {
+
+    private static Logger logger = LoggerFactory.getLogger(SongController.class);
 
     @Autowired
     private S3Services s3Service;
@@ -65,84 +65,122 @@ public class SongController {
                         .body(user));
     }
 
+
     @GetMapping("/songs")
     @CircuitBreaker(name = "musicBreaker", fallbackMethod = "fallbackGetUserSongs")
-    public Mono<ResponseEntity<List<SongResponseDTO>>> getUserSongs(@RequestHeader("Authorization") String token) {
-        UserDetailsDTO userDetailsDTO = userServiceClient.getUserInfo(token).block();
-        List<SongResponseDTO> songs = songService.getUserSongs(userDetailsDTO.getId()).stream()
-                .map(song -> new SongResponseDTO(
-                        song.getId(),
-                        song.getTitle(),
-                        song.getS3Key(),
-                        song.getContentType(),
-                        song.getDurationSec(),
-                        song.getFileSize()
-                )).toList();
-        return Mono.just(ResponseEntity.ok(songs));
+    public Mono<ResponseEntity<List<SongResponse>>> getUserSongs(@RequestHeader("Authorization") String token) {
+        return userServiceClient.getUserInfo(token).flatMap(userDetailsDTO -> {
+            List<SongResponse> songs = songService.getUserSongs(userDetailsDTO.getId()).stream()
+                    .map(song -> {
+                        return new SongResponse(song);
+                    })
+                    .collect(Collectors.toList());
+            return Mono.just(ResponseEntity.ok(songs));
+        }).onErrorResume(ex -> {
+            return Mono.just(ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(new ArrayList<>()));
+        });
     }
 
+    public Mono<ResponseEntity<List<SongResponse>>> fallbackGetUserSongs(
+            @RequestHeader("Authorization") String token, Throwable t) {
+        logger.error("Circuit breaker triggered for getUserSongs: {}", t.getMessage());
+        return Mono.just(ResponseEntity
+                .status(HttpStatus.SERVICE_UNAVAILABLE)
+                .body(List.of()));
+    }
+
+    @GetMapping(value = "/allsongs", produces = MediaType.APPLICATION_JSON_VALUE)
+    public Mono<ResponseEntity<List<?>>> allSongs() {
+        List<Song> allSongs = songService.getAllSongs();
+        return Mono.just(ResponseEntity.status(HttpStatus.OK).body(allSongs));
+    }
 
     @PostMapping(value = "/upload", consumes = MediaType.MULTIPART_FORM_DATA_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
-    public Mono<ResponseEntity<SongUploadResponseDTO>> uploadMusic(
+    public Mono<ResponseEntity<List<SongUploadResponseDTO>>> uploadMusic(
             @RequestHeader("Authorization") String token,
-            @RequestPart("file") MultipartFile file) {
+            @RequestPart("files") MultipartFile[] files) {
 
-        if (file == null || file.isEmpty()) {
-            return Mono.just(ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(new SongUploadResponseDTO("No file provided")));
+        if (files == null || files.length == 0) {
+            return Mono.just(ResponseEntity.badRequest()
+                    .body(List.of(new SongUploadResponseDTO("No files provided"))));
         }
-        String rawContentType = file.getContentType();
-        if (rawContentType == null) {
-            return Mono.just(ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(new SongUploadResponseDTO("File content type cannot be determined")));
-        }
-        MediaType contentType =MediaType.parseMediaType(file.getContentType());
-        if (!isAudioContentType(contentType)) {
-            return Mono.just(ResponseEntity.status(HttpStatus.UNSUPPORTED_MEDIA_TYPE)
-                    .body(new SongUploadResponseDTO("Unsupported file type: " + contentType)));
-        }
+
+
         return userServiceClient.getUserInfo(token)
-                .timeout(Duration.ofSeconds(5))
+                .timeout(Duration.ofSeconds(10))
                 .flatMap(user -> {
-                    System.out.println("User ID: " + user.getId());
                     if (user.getId() == null) {
                         return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                                .body(new SongUploadResponseDTO("User ID is missing")));
+                                .body(List.of(new SongUploadResponseDTO("User ID is missing"))));
                     }
-                    try {
-                        Song song = songService.uploadSong(file, user.getId());
-                        return Mono.just(ResponseEntity.ok()
-                                .body(new SongUploadResponseDTO(
-                                        song.getId(),
-                                        user.getId(),
-                                        song.getS3Key(),
-                                        song.getTitle(),
-                                        song.getFileSize(),
-                                        song.getDurationSec(),
-                                        song.getContentType(),
-                                        null,
-                                        song.getUploadedAt()// No error message
-                                )));
-                    } catch (IOException | TikaException | SAXException | TagException | InvalidAudioFrameException |
-                             ReadOnlyFileException | CannotReadException e) {
-                        return Mono.just(ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                                .body(new SongUploadResponseDTO("Error processing file: " + e.getMessage())));
-                    }
-                })
-                .onErrorResume(ex -> {
-                    if (ex instanceof WebClientResponseException.Unauthorized) {
-                        return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                                .body(new SongUploadResponseDTO("Unauthorized: Invalid token")));
-                    } else if (ex instanceof TimeoutException) {
-                        return Mono.just(ResponseEntity.status(HttpStatus.REQUEST_TIMEOUT)
-                                .body(new SongUploadResponseDTO("Request timed out")));
-                    } else {
-                        return Mono.just(ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                                .body(new SongUploadResponseDTO("Unexpected error: " + ex.getMessage())));
-                    }
-                });
 
+                    return Flux.fromArray(files)
+                            .flatMap(file -> processSingleFile(file, user.getId()))
+                            .collectList()
+                            .map(responses -> {
+                                boolean allSuccess = responses.stream()
+                                        .allMatch(response -> response.getErrMessage() == null);
+
+                                HttpStatus status = allSuccess ? HttpStatus.OK :
+                                        responses.stream().anyMatch(r -> r.getErrMessage()!= null &&
+                                                r.getErrMessage().contains("Unsupported"))
+                                                ? HttpStatus.UNSUPPORTED_MEDIA_TYPE
+                                                : HttpStatus.MULTI_STATUS;
+
+                                return ResponseEntity.status(status).body(responses);
+                            });
+                })
+                .onErrorResume(this::handleErrorCases);
     }
+
+    private Mono<SongUploadResponseDTO> processSingleFile(MultipartFile file, UUID userId) {
+        logger.info("file info: " + file.getOriginalFilename() + " " + userId);
+        if (file.isEmpty()) {
+            return Mono.just(new SongUploadResponseDTO("Empty file: " + file.getOriginalFilename()));
+        }
+
+        String rawContentType = file.getContentType();
+        logger.info("file content type: " + rawContentType);
+        if (rawContentType == null) {
+            return Mono.just(new SongUploadResponseDTO(
+                    "Content type cannot be determined for: " + file.getOriginalFilename()));
+        }
+
+        MediaType contentType = MediaType.parseMediaType(rawContentType);
+        if (!isAudioContentType(contentType)) {
+            return Mono.just(new SongUploadResponseDTO(
+                    "Unsupported file type: " + contentType + " for: " + file.getOriginalFilename()));
+        }
+
+        try {
+            Song song = songService.uploadSong(file, userId);
+            logger.info("Song successfully uploaded: id={}, s3Key={}", song.getId(), song.getS3Key());
+
+            SongUploadResponseDTO responseDTO = new SongUploadResponseDTO(song, userId);
+
+            logger.info("Created response DTO: {}", responseDTO);
+            return Mono.just(responseDTO);
+        } catch (Exception e) {
+            logger.error("Error processing file: {}", e.getMessage(), e);
+            return Mono.just(new SongUploadResponseDTO(
+                    "Error processing " + file.getOriginalFilename() + ": " + e.getMessage()));
+        }
+    }
+
+    private Mono<ResponseEntity<List<SongUploadResponseDTO>>> handleErrorCases(Throwable ex) {
+        if (ex instanceof WebClientResponseException.Unauthorized) {
+            return Mono.just(ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(List.of(new SongUploadResponseDTO("Unauthorized: Invalid token"))));
+        } else if (ex instanceof TimeoutException) {
+            return Mono.just(ResponseEntity.status(HttpStatus.REQUEST_TIMEOUT)
+                    .body(List.of(new SongUploadResponseDTO("Request timed out"))));
+        } else {
+            return Mono.just(ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                    .body(List.of(new SongUploadResponseDTO("Unexpected error: " + ex.getMessage()))));
+        }
+    }
+
+
     private boolean isAudioContentType(MediaType contentType) {
         return SUPPORTED_AUDIO_TYPES.stream()
                 .anyMatch(supported -> supported.includes(contentType));
